Fixed the overlapping layout

--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,7 @@ a {
     width: 100%;
     display: flex;
     margin-bottom: 25px;
+    z-index: 1;
 }
 
 .catalog-title .text { flex-grow: 1; }
